tests/sksl/errors/golden/GrNoFragmentProcessorExpressions.cpp
### Compilation failed:

error: 5: ternary expression of type 'fragmentProcessor' not allowed
1 error
